--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -35,13 +35,20 @@ jobs:
     - run: npm i # replace with 'npm ci' after committing lock file from first install
     - run: npm run build
     - name: Update base href in index.html
-      run: sed -i 's|<base href="[^"]*">|<base href="/${{ github.event.repository.name }}/">|' ./dist/index.html
+      run: |
+        sed -i 's|<base href="[^"]*">|<base href="/${{ github.event.repository.name }}/">|' ./dist/index.html
     - name: Update Resource Paths
       run: find ./dist -maxdepth 1 -type f ! -name 'sw*.js' ! -name 'workbox*.js' -name '*.js' -exec sed -i -e "s|/src/assets|/${{ github.event.repository.name }}/src/assets|g" -e "s|url('/src/assets|url('/${{ github.event.repository.name }}/src/assets|g" {} +
     - name: Copy ig-theme.css to dist
       run: cp ./ig-theme.css ./dist/
     - name: Update href Paths for ig-theme.css
       run: find ./dist -type f -exec sed -i "s|href=\"../../ig-theme.css\"|href=\"../../${{ github.event.repository.name }}/ig-theme.css\"|g" {} +
+    - name: Update Router Navigation in app-root.ts
+      run: |
+        sed -i "s|Router.go(\`/|Router.go(\`/${{ github.event.repository.name }}/|g" ./src/app/app.ts
+        sed -i "s|Router.go(\`/|Router.go(\`/${{ github.event.repository.name }}/|g" ./src/app/home/app.ts
+    - name: View app-root.ts after change
+      run: cat ./src/app-root.ts
     - name: SPA routing handling
       run: cp ./dist/index.html ./dist/404.html
     - name: Upload build artifact to GitHub Pages
