--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -48,7 +48,7 @@ jobs:
         sed -i "s|Router.go(\`/|Router.go(\`/${{ github.event.repository.name }}/|g" ./src/app/app.ts
         sed -i "s|Router.go(\`/|Router.go(\`/${{ github.event.repository.name }}/|g" ./src/app/home/home.ts
     - name: View app-root.ts after change
-      run: cat /src/app/app.ts
+      run: cat ./src/app/app.ts
     - name: SPA routing handling
       run: cp ./dist/index.html ./dist/404.html
     - name: Upload build artifact to GitHub Pages
